--- a/Class17/Class17.Rmd
+++ b/Class17/Class17.Rmd
@@ -19,11 +19,11 @@ library(RColorBrewer)
 ```
 
 ```{r}
-cytoscapePing()
+# cytoscapePing()
 ```
 
 ```{r}
-cytoscapeVersionInfo()
+# cytoscapeVersionInfo()
 ```
 
 ```{r}
